feat: Add color and file list to output
This commit introduces the use of the 'colored' crate to add color to the
output messages. This makes it easier for users to distinguish between
different types of messages.

Additionally, a list of the files copied is now printed to the console.
This provides users with a clear overview of what files were processed,
enhancing the transparency of the tool's operation.

The 'combine_files_content' function was also refactored to return a tuple
containing the combined content and the list of files. This was necessary
to facilitate the printing of the file list in the main function.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cliperge"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 description = "A CLI tool to combine the contents of multiple files and copy to the clipboard"
 license = "MIT"
@@ -12,6 +12,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 clipboard = "0.5.0"
+colored = "2.0.0"
 
 [package.metadata.docs.rs]
 # Include examples in documentation.
