--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-colored = "2.0.0"
+clap = { version = "4.0", features = ["derive"] }
+dirs = "4.0"
+colored = "2.0"
 
 [package.metadata.docs.rs]
 # Include examples in documentation.
