perf: optimize relative path calculation logic
Switched from manual strip_prefix to pathdiff::diff_paths for computing
relative paths. This improves performance by leveraging a well-tested
library function, reduces error-prone manual logic, and enhances code
readability. The change also ensures more robust handling of edge cases
in path resolution, making file operations more reliable and maintainable.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["command-line-utilities"]
 clap = { version = "4.0", features = ["derive"] }
 dirs = "4.0"
 colored = "2.0"
+pathdiff = "0.2"
 
 [package.metadata.docs.rs]
 # Include examples in documentation.
